fix/Ranking - Score
